# givens-factorization

./: CMakeLists.txt  LICENSE  README.md  coordinate_descent.py  example.py  givens.py  givens_gpu.cpp  givens_gpu.cu  pip_requirements.txt  test_givens_gpu.py  util.cu  util.h  util.py
